# Homework-22

./: .env.example  .gitignore  README.md  pyproject.toml
catalog/: admin.py  models.py
catalog/fixtures/: initial_data.json
catalog/management/commands/: load_test_data.py
catalog/migrations/: 0001_initial.py
catalog/templates/: contacts.html  home.html
config/: settings.py  urls.py
