[tool.poetry]
name = "homework-22"
version = "0.1.0"
description = ""
authors = ["Konstantin Antonov <kostaantonov59@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django = "5.1.4"
psycopg2-binary = "^2.9.12"
python-decouple = "^3.8"
pillow = "^12.2.0"
ipython = "^9.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
